<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="@dimen/general_padding"
    android:background="@drawable/istockphoto_1349604514_612612"
    android:columnCount="4">

    <EditText
        android:inputType="numberDecimal"
        android:layout_height="@dimen/edit_field_height"
        android:layout_width="match_parent"
        android:background="#55DCDCDC"
        android:layout_columnSpan="4"
        android:text="@string/edit_text_preview"
        android:gravity="right|center_vertical"
        android:textSize="@dimen/edit_text_size"
        android:maxLength="13">
    </EditText>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_7"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_8"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_9"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_division"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_4"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_5"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_6"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_multiplication"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_1"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_3"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_minus"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_result"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_point"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/key_plus"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_margin="@dimen/button_margin"
        android:textSize="@dimen/button_text_size"
        android:backgroundTint="#F5F5F5"
        android:textColor="#000000">
    </Button>

</GridLayout>